--- a/branches/branch-playground/plugins/_core/managerbase.ui
+++ b/branches/branch-playground/plugins/_core/managerbase.ui
@@ -6,85 +6,81 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>306</width>
-    <height>252</height>
+    <width>323</width>
+    <height>247</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Connection manager</string>
   </property>
   <property name="sizeGripEnabled">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
-  <layout class="QGridLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="margin">
     <number>11</number>
    </property>
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <item row="2" column="2">
-    <widget class="QPushButton" name="btnUpdate">
-     <property name="text">
-      <string>&amp;Configure</string>
-     </property>
-    </widget>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QListWidget" name="lstConnection">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="resizeMode">
+        <enum>QListView::Adjust</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QPushButton" name="btnDown">
+         <property name="text">
+          <string>&amp;Down</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnUp">
+         <property name="text">
+          <string>&amp;Up</string>
+         </property>
+         <property name="autoDefault">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnUpdate">
+         <property name="text">
+          <string>&amp;Configure</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnAdd">
+         <property name="text">
+          <string>&amp;New connection</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnRemove">
+         <property name="text">
+          <string>&amp;Remove</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
    </item>
-   <item row="0" column="2">
-    <widget class="QPushButton" name="btnUp">
-     <property name="text">
-      <string>&amp;Up</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="btnDown">
-     <property name="text">
-      <string>&amp;Down</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="2">
-    <widget class="QPushButton" name="btnRemove">
-     <property name="text">
-      <string>&amp;Remove</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="btnAdd">
-     <property name="text">
-      <string>&amp;New connection</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="2">
-    <spacer name="Spacer4">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Expanding</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="6" column="1" colspan="2">
+   <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <spacer name="Horizontal Spacing2">
        <property name="orientation">
@@ -113,18 +109,10 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="0" rowspan="7">
-    <widget class="QListWidget" name="lstConnection"/>
-   </item>
   </layout>
  </widget>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <tabstops>
-  <tabstop>btnUp</tabstop>
-  <tabstop>btnDown</tabstop>
-  <tabstop>btnUpdate</tabstop>
-  <tabstop>btnAdd</tabstop>
-  <tabstop>btnRemove</tabstop>
   <tabstop>buttonCancel</tabstop>
  </tabstops>
  <resources/>
