--- a/branches/branch-playground/plugins/background/bkgndcfgbase.ui
+++ b/branches/branch-playground/plugins/background/bkgndcfgbase.ui
@@ -215,7 +215,7 @@
     <customwidget>
       <class>LinkLabel</class>
       <extends>QWidget</extends>
-      <header location="local" >linklabel.h</header>
+      <header location="local" >simgui/linklabel.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
